# time-seri-forcasting-lap

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  README.md  generate_final_report.py  pyproject.toml  requirements.txt  setup.py  test_fix.py
docs/: QUICK_START.md  usage_guide.md
examples/: basic_usage.py  complete_solution.py  lab4_complete_demo.py  lab4_example.py  pjm_lab4_example.py  simple_lab4_example.py
notebooks/: 01_complete_analysis.ipynb  lab4_complete_summary.ipynb  task1.ipynb  task2.ipynb  task3.ipynb  task4.ipynb
reports/: index.md
reports/task1/: task1_analysis_report.md  task1_executed.ipynb  task1_summary.json
results/task1/: task1_analysis_report.md
results/task2/: task2_metrics_20250723_090902.csv  task2_report_20250723_090902.md  task2_results_20250723_090902.json
results/task3/: task3_metrics_20250723_090805.csv  task3_report_20250723_090805.md  task3_results_20250723_090805.json
results/task4/: task4_results_20250723_083338.json  task4_transformer_metrics_20250723_083338.csv  task4_transformer_report_20250723_083338.md
scripts/: run_analysis.py
tests/: __init__.py
time_series_forecasting/: __init__.py
time_series_forecasting/analysis/: __init__.py  lab4_interface.py  pjm_analyzer.py
time_series_forecasting/config/: __init__.py  settings.py
time_series_forecasting/core/: __init__.py  data_processor.py  window_generator.py
time_series_forecasting/metrics/: evaluation_metrics.py
time_series_forecasting/models/: __init__.py  model_factory.py  model_trainer.py
time_series_forecasting/pipeline/: __init__.py  (+5 more)
(+49 files in other folders)
