[project]
name = "time-series-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "kaggle>=1.5.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "plotly>=5.0.0",
    "scikit-learn>=1.0.0",
    "seaborn>=0.11.0",
    "statsmodels>=0.13.0",
    "tensorflow>=2.8.0",
    "torch>=1.12.0",
    "tqdm>=4.64.0",
    "transformers>=4.20.0",
    "xgboost>=1.5.0",
]
